# tools-shared

./: .gitignore  .habitat  README.md  config.py  default_env.py  envsetup.template.sh  format.sh  gen_ios_pkg.py  git_lynx.py
android_tools/: OWNERS  generate_cmake_scripts_from_gn.py  update_local_properties.py  write_gn_args.py
checkers/: android_code_style_checker.py  api_checker.py  arkts_lint_checker.py  arkts_lint_helper.py  checker.py  checker_manager.py  code_format_helper.py  coding_style_checker.py  commit_message_checker.py  commit_message_helper.py  copyright_notice_checker.py  cpp_header_path_checker.py  cpplint.py  cpplint_checker.py  default_config.py  dependency_check.py  deps_permission_checker.py  envsetup_utils.py  file_type_checker.py  format_file_filter.py  gn_relative_path_checker.py  header_guard_processor.py  java_lint_checker.py  macro_checker.py  process_header_path_helper.py  spell_checker.py  utils.py
checkers/copyright/: copyright_processor.py  log.py  (+1 more)
checkers/copyright/testcases/: BUILD.gn  CanvasLegacy.java  LLog.java  PaintingContextTest.java  RenderkitViewDelegate.java  _testing.rules  check_android_build.py  log.py  message_loop_unittests.cc
dependencies/: DEPS
docs/: COMMIT_MESSAGE_FORMAT.md
git_templates/: normal
gn_tools/: gn_check_target_name.py  gn_relative_path_converter.py  gn_wrapper.py
ios_tools/: generate_podspec_scripts_from_gn.py
jni_generator/: OWNERS  generate_and_register_jni_files.py  jni_generator.py
utils/: find_classes.py  merge_request.py
vpython_tools/: requirements.txt  vpython_env_setup.py
(+5 files in other folders)
